--- a/pages/réalisations.html
+++ b/pages/réalisations.html
@@ -22,23 +22,26 @@
                 </div> 
                 <div class="left">
                     <h2>Olivia Lahary</h2> 
-                    <h4 class="status">Développeuse Web, Web Mobile</h4>
+                    <h4 class="status"> Développeuse / Testeuse </h4>
                     <!--contact-->
                     <!-- réalisation d'un toggle  -->
                     <div id="flip"><strong> Cliquez pour obtenir mes coordonnées.</strong></div>
                     <div id="panel">
-                    <p>contact: <a href="mailto:olivia@lahary.net">olivia@lahary.net</a></p>
-                    <!--telephone-->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16">
-                        <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
-                        <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/></svg>06.65.61.70.73</p>
+                        <p>contact: <a href="mailto:olivia@lahary.net">olivia@lahary.net</a></p>
+                        <!--telephone-->
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-phone" viewBox="0 0 16 16">
+                            <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
+                            <path d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/></svg>06.65.61.70.73</p>
                     </div>
                     <!--réseaux-->
                     <!--linkedin-->
-                    <a href="https://www.linkedin.com/in/olivia-lahary-9292551bb/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-                        <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-                    </svg></a>
-                    </div>
+                    <a class="reseaux" target="__blank" href="https://www.linkedin.com/in/olivia-lahary-9292551bb/">
+                        <img src="../img/LinkedIn_logo.png" alt="logo linkedIn" style="width:20px; height:auto;" >
+                    </a>
+                    <!--github-->
+                    <a target="_blank" href="https://github.com/OliviaLahary">
+                        <img src="../img/github.png" alt="logo git hub" style="width:20px; height:auto;">
+                    </a>
                 </div>  
             </div>
         </div>
@@ -85,11 +88,54 @@
             <div class="col">
                 <div class="card">
                     <div class="card-img-top">
-                        <a href="../realisations/galeriePhoto/index.html" target="_blank"><img src="../img/galeriePhoto_1280.jpg" class="img-real"  alt="illustration galerie photo">
+                        <a href="../realisations/galeriePhoto/index.html" target="_blank"><img src="../img/galeriePhotoResized.jpg" class="img-real"  alt="illustration galerie photo">
                         </a>   
                     </div> 
                     <div class="card-body">
                         <p class="card-text"> Réalisation d'un essai d'affichage d'une série de photo en javascript. <img src="../img/javascriptresized.svg" alt="logo Javascript"></p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card">
+                    <div class="card-img-top">
+                        <a href="../img/cdcRessourcesRelationnelles.pdf" target="_blank"><img src="../img/CDCRR.jpg" class="img-real"  alt="illustration Cahier des charges Resources relationnelles">
+                        </a>   
+                    </div> 
+                    <div class="card-body">
+                        <p class="card-text"> Rédaction d'un cahier des charges pour un projet fil rouge dans le cadre de mon année de Bachelor Concepteur Développeur d'Applications </p>
+                        
+
+                        <a href="../img/cdcRessourcesRelationnelles.pdf" class=" telechargement" target="_blank"><img src="../img/pdf_reseized.png" alt="logo pdf"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card">
+                    <div class="card-img-top">
+                        <a href="../img/CUBE2-ECRIT.pdf" target="_blank"><img src="../img/docuTechniqueCDA.png" class="img-real"  alt="illustration écrit documentation technique">
+                        </a>   
+                    </div> 
+                    <div class="card-body">
+                        <p class="card-text"> Rédaction d'un livrable technique pour un projet fil rouge dans le cadre de mon année de Bachelor Concepteur Développeur d'Applications  </p>
+
+                        <a href="../img/CUBE2-ECRIT.pdf" class=" telechargement" target="_blank"><img src="../img/pdf_reseized.png" alt="logo pdf"></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card">
+                    <div class="card-img-top">
+                        <a href="../img/ecrit-Bloc3.pdf" target="_blank"><img src="../img/deploiementEtSecuriteBloc3.png" class="img-real"  alt="illustration écrit documentation technique">
+                        </a>   
+                    </div> 
+                    <div class="card-body">
+                        <p class="card-text"> Rédaction d'un livrable de déploiement et de sécurité pour un projet fil rouge dans le cadre de mon année de Bachelor Concepteur Développeur d'Applications  </p>
+
+                        <a href="../img/ecrit-Bloc3.pdf" class=" telechargement" target="_blank"><img src="../img/pdf_reseized.png" alt="logo pdf"></a>
                     </div>
                 </div>
             </div>
@@ -100,7 +146,7 @@
         <a href="#" style="display: block; position: fixed; bottom: 15px; right: 70px;"><img src="../img/sc1.png" alt="fleche" id="sc"></a>
     </div>
 
-    <footer class="footer"> &copy; OLIVIA LAHARY 2022</footer>
+    <footer class="footer"> &copy; OLIVIA LAHARY 2023 </footer>
 
 <!--on met les bibliotheques bootstrap et jQuery en fin de page-->
 <script src="../js/jquery-3.5.1.min.js"></script>
