--- a/pages/experience.html
+++ b/pages/experience.html
@@ -59,7 +59,7 @@
         </div>
         <!--corps du texte des expériences pro essayer de mettre le curseur sur le mot mis en avance-->
         <div class="container">
-            <h3>Expériences professionnelles : </h3>
+            <h3 class="nav-link  title">Expériences professionnelles  </h3>
         </div>
         <div class="experiences">
             <div class="colLeft"> Septembre 2022 - Septembre 2023 JDC, Bordeaux, Gironde.</div>
@@ -142,7 +142,11 @@
     </a>
 </div>
 
-<footer class="footer"> &copy; OLIVIA LAHARY 2023</footer>
+<footer>
+    <div class="container"> 
+        <a class="lienInternet"  href="PlanDuSite.html"> Plan du site </a>  | <a class="lienInternet"  href="mentionsLegales.html"> Mentions Légales </a> | <a class="lienInternet"  href="politiqueDeConfidentialite.html"> Politique de confidentialité </a></div>
+    <div class="footer"> &copy; OLIVIA LAHARY 2023 </div>
+</footer>
 
 <!--on met les bibliotheques bootstrap et jQuery en fin de page-->
 <script src="../js/jquery-3.5.1.min.js"></script>
