--- a/pages/réalisations.html
+++ b/pages/réalisations.html
@@ -58,7 +58,10 @@
             </nav>
         </div>
     </div>
-    
+    <div class="container">
+        <h3 class="nav-link  title"> Réalisations </h3>
+    </div>
+    <div class="container">
         <div class="row row-cols-1 row-cols-md-2">
             <div class="col">
                 <div class="card" >
@@ -140,13 +143,18 @@
                 </div>
             </div>
         </div>
+    </div>
     
 <!-- Ajout d'une fleche de retour vers le haut -->
     <div id="divDuTop">
         <a href="#" style="display: block; position: fixed; bottom: 15px; right: 70px;"><img src="../img/sc1.png" alt="fleche" id="sc"></a>
     </div>
 
-    <footer class="footer"> &copy; OLIVIA LAHARY 2023 </footer>
+    <footer>
+        <div class="container"> 
+            <a class="lienInternet" href="PlanDuSite.html"> Plan du site </a>  | <a class="lienInternet"  href="mentionsLegales.html"> Mentions Légales </a> | <a class="lienInternet"  href="politiqueDeConfidentialite.html"> Politique de confidentialité </a></div>
+        <div class="footer"> &copy; OLIVIA LAHARY 2023 </div>
+    </footer>
 
 <!--on met les bibliotheques bootstrap et jQuery en fin de page-->
 <script src="../js/jquery-3.5.1.min.js"></script>
