--- a/pages/skills.html
+++ b/pages/skills.html
@@ -57,7 +57,7 @@
         </nav>
     </div>
     <div class="container  ">
-        <h3>Skills</h3>
+        <h3 class="nav-link  title">Skills</h3>
     <!-- mes compétences et savoir etre et centres d'interêts --> 
             <ul>
                 <div class="icon-progress">
@@ -206,7 +206,7 @@
 
             <li>2017: Formation SST<a href="../index.html#ancre1.7" id="ancre17" class="link-exp"><img src="../img/sst (2).png" alt="Logo SST"></a></li>
 
-            <li>2011: conduite et utilisation d'autoclave.</li>
+            <li>2011: Conduite et utilisation d'autoclave.</li>
         </ul><br>                          
     </div>
         
@@ -228,7 +228,11 @@
         <img src="../img/sc1.png" alt="fleche" id="sc">
     </a>
 </div>
-<footer class="footer"> &copy; OLIVIA LAHARY 2023</footer>
+<footer>
+    <div class="container"> 
+        <a class="lienInternet"  href="PlanDuSite.html"> Plan du site </a>  | <a class="lienInternet" href="mentionsLegales.html"> Mentions Légales </a> | <a class="lienInternet"  href="politiqueDeConfidentialite.html"> Politique de confidentialité </a></div>
+    <div class="footer"> &copy; OLIVIA LAHARY 2023 </div>
+</footer>
 
 <!--on met les bibliotheques bootstrap et jQuery en fin de page-->
 <script src="../js/jquery-3.5.1.min.js"></script>
